tests/03-typecheck/02-func-redefined.ref
tests/03-typecheck/02-func-redefined.sl:4:6, Semantic error: func sum is redefined
